- Made production level changes to ETL API (transferred writedatabase function call to get Sets data) - Implemented getSetsData function to recursively get posts data and related media for each post of each profile on each set - Added total counter metrics to Home page in case sets data has been summoned (compares the number of records in DB with number of posts mentioned on each profile in totals)

--- a/src/views/layouts/layout-home.ejs
+++ b/src/views/layouts/layout-home.ejs
@@ -9,5 +9,6 @@
 
 <%- include ../layouts/layout-footer.ejs %>
 <script src="/js/socket-prepare.js"></script>
+<script src="/js/sets-client.js"></script>
 </body>
 </html>
