--- a/src/views/pages/sidepanel-dashboards.ejs
+++ b/src/views/pages/sidepanel-dashboards.ejs
@@ -8,6 +8,7 @@
     <div style="overflow-y: scroll;max-height:20vh;margin-bottom:25px" id="autocomplete-results"></div>
     <textarea style="display:block; padding:5px; margin:10px; min-height:200px;width:25em" id="seta" class="seta" ondrop="drop(event)" ondragover="allowDrop(event)"></textarea>
     <textarea style="display:block; padding:5px; margin:10px; min-height:200px;width:25em;" id="setb" class="setb" ondrop="drop(event)" ondragover="allowDrop(event)"></textarea>
+    <input  style="width:40%; display:inline;margin:5px;padding:10px;" placeholder="Set limit"  type="number" class="form-control" id="set-limit-input" count=0>
     <input style="text-align:center;display:block; padding:5px; margin:20px; min-width:25%" value="Get default sets" type="button" class="btn btn-primary" click-target="/instagram/sets/data?" call-type="form-data">
     <input id="resetSets" style="text-align:center;display:block; padding:5px; margin:20px; min-width:25%" value="Reset sets" type="button" class="btn btn-secondary">
     <input id="getDataBtn" style="text-align:center;display:block; padding:5px; margin:20px; min-width:25%" value="Start..." type="button" class="btn btn-primary" call-type="form-data">
@@ -16,4 +17,4 @@
     <div id="counterb" class="stats-totals"></div>
   </div>
 </div>
-<!--<input style="text-align:center;display:block; padding:5px; margin:20px; min-width:25%" value="Reset filters" type="button" class="btn btn-primary" click-target="/instagram/sets/data?" call-type="form-data">-->
+
