--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -811,6 +811,17 @@ button {
   margin:1px;
   display:inline-block;
 }
+.counter-metric-home-span{
+  background-color: #222;
+  text-align: center;
+  vertical-align: middle;
+  padding:5px;
+  padding-left:10px;
+  padding-right:10px;
+  width: 20ch;
+  margin:1px;
+  display:inline-block;
+}
 .widget-title, .widget-notes{
   color:#b4afaf
 }
