- Updated some text content on login and registration pages. - Added set limit via slicing the set members input array

--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -16,7 +16,7 @@
   <main style="background-color: #dbe7f3; border-radius: 100px;" class="login container">
     <div class="row">
       <div class="col-12 col-6-tablet push-3-tablet text-center heading">
-        <h1 class="font-100">Instagram account:</h1>
+        <h1 class="font-100">Socialytics:</h1>
         <h6 style="color:darkred; font-size:10px" class="font-100">Get Instagram session-id cookie from instagram page in your browser!</h6>
       </div>
     </div>
