--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -17,8 +17,7 @@
   <main style="background-color: #dbe7f3; border-radius: 100px;" class="login container">
     <div class="row">
       <div class="col-12 col-6-tablet push-3-tablet text-center heading">
-        <h1 class="font-100">Instagram account:</h1>
-        <h6 style="color:darkred; font-size:10px" class="font-100">Get Instagram session-id cookie from instagram page in your browser!</h6>
+        <h1 style="font-family: fantasy;" class="font-100">Socialytics:</h1>
       </div>
     </div>
     <div class="row">
@@ -30,10 +29,10 @@
             <input class="block form-control" type="password" id="password" name="password" placeholder="password">
           </fieldset>
           <button style="cursor:pointer;" type="submit" id="login" class="button button-primary block signup">
-            Use this Instagram account
+            Login to socialytics
           </button>
           <a href="/registration" style="cursor:pointer;" id="registration" class="button button-primary block signup">
-           Or go to registeration
+           Signup
           </a>
         </form>
       </div>
