- Fixed bug in which the posts gathered by ETL have been accumulated in an array which meant to be sliced sample before sending to client which i have added in this commit - Added charts icon to resources - Fixed style issues for holders class (placeholders in html elements)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -703,3 +703,10 @@ img {
     margin-top:5%
   }
 }*/
+.holders {
+ /* height:100px;
+  width:100px;
+  background: url(../img/charts.png) no-repeat center fixed;
+  background-size: 100px 100px;*/
+  opacity:0.05;
+}
