--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -47,7 +47,7 @@
         Profiles A
       </div>
       <div style="min-width: 100px;min-height:200px;" id="stats-hbar-a" class="widget-stage classa">
-        <img data-src="holder.js/100px120?theme=white">
+        <img class="holders" data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes"></div>
     </div>
@@ -57,7 +57,7 @@
         Profiles metrics A
       </div>
       <div id="profiles-counters-a" class="widget-stage classa counters-stage">
-        <img data-src="holder.js/100px120?theme=white">
+        <img class="holders" data-src="holder.js/100px120?theme=white">
       </div>
       <div style="margin-left:32px;margin-top:30px;" id="profileA-metrics-legend" class="widget-notes">
       </div>
@@ -68,7 +68,7 @@
         Profiles B
       </div>
       <div style="min-width: 100px;min-height:200px;" id="stats-hbar-b" class="widget-stage classb">
-        <img data-src="holder.js/100px120?theme=white">
+        <img class="holders" data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes"></div>
     </div>
@@ -78,7 +78,7 @@
         Profiles metrics B
       </div>
       <div id="profiles-counters-b" class="widget-stage classb counters-stage">
-        <img data-src="holder.js/100px120?theme=white">
+        <img class="holders" data-src="holder.js/100px120?theme=white">
       </div>
       <div style="margin-left:32px;margin-top:30px;" id="profileB-metrics-legend" class="widget-notes">
       </div>
@@ -89,7 +89,7 @@
           Profiles trends A
         </div>
         <div id="lines-seta" class="widget-stage classa">
-          <img data-src="holder.js/100px120?theme=white">
+          <img class="holders" data-src="holder.js/100px120?theme=white">
         </div>
         <div class="widget-notes"></div>
       </div>
@@ -98,7 +98,7 @@
           Profiles trends B
         </div>
         <div id="lines-setb" class="widget-stage classb">
-          <img data-src="holder.js/100px120?theme=white">
+          <img class="holders" data-src="holder.js/100px120?theme=white">
         </div>
         <div class="widget-notes"></div>
       </div>
@@ -107,7 +107,7 @@
           Set A Heatmap calendar
         </div>
         <div id="heatA" class="widget-stage classa">
-          <img data-src="holder.js/100px120?theme=white">
+          <img class="holders" data-src="holder.js/100px120?theme=white">
         </div>
         <div class="widget-notes"></div>
       </div>
@@ -116,7 +116,7 @@
           Set B Heatmap calendar
         </div>
         <div id="heatB" class="widget-stage classb">
-          <img data-src="holder.js/100px120?theme=white">
+          <img class="holders" data-src="holder.js/100px120?theme=white">
         </div>
         <div class="widget-notes"></div>
       </div>
@@ -141,13 +141,13 @@
           <!-- Tab panes -->
           <div style="max-width:45vw" class="tab-content">
             <div style="max-width:45vw" class="tab-pane active container widget-stage classa" id="DoMA">
-              <img data-src="holder.js/78px120?theme=white">
+              <img class="holders" data-src="holder.js/78px120?theme=white">
             </div>
             <div style="max-width:45vw" class="tab-pane container widget-stage classa" id="DoWA">
-              <img data-src="holder.js/78px120?theme=white">
+              <img class="holders" data-src="holder.js/78px120?theme=white">
             </div>
             <div style="max-width:45vw" class="tab-pane container widget-stage classa" id="HoDA">
-              <img data-src="holder.js/78px120?theme=white">
+              <img class="holders" data-src="holder.js/78px120?theme=white">
             </div>
           </div>
         </div>
@@ -175,13 +175,13 @@
           <!-- Tab panes -->
           <div style="max-width:45vw" class="tab-content">
             <div style="max-width:45vw" class="tab-pane active container widget-stage classb" id="DoMB">
-              <img data-src="holder.js/78px120?theme=white">
+              <img class="holders" data-src="holder.js/78px120?theme=white">
             </div>
             <div style="max-width:45vw" class="tab-pane container widget-stage classb" id="DoWB">
-              <img data-src="holder.js/78px120?theme=white">
+              <img class="holders" data-src="holder.js/78px120?theme=white">
             </div>
             <div style="max-width:45vw" class="tab-pane container widget-stage classb" id="HoDB">
-              <img data-src="holder.js/78px120?theme=white">
+              <img class="holders" data-src="holder.js/78px120?theme=white">
             </div>
           </div>
         </div>
@@ -193,7 +193,7 @@
         Profiles maps A
       </div>
       <div class="widget-stage classa">
-        <img data-src="holder.js/100px120?theme=white">
+        <img class="holders" data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes"></div>
     </div>
@@ -202,7 +202,7 @@
         Set A Total metrics
       </div>
       <div id="total-metrics-a" class="widget-stage classa">
-        <img data-src="holder.js/100px120?theme=white">
+        <img class="holders" data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes"></div>
     </div>
@@ -211,7 +211,7 @@
         Profiles maps B
       </div>
       <div class="widget-stage classb">
-        <img data-src="holder.js/100px120?theme=white">
+        <img class="holders" data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes"></div>
     </div>
@@ -220,7 +220,7 @@
         Set B total metrics
       </div>
       <div id="total-metrics-b" class="widget-stage classb">
-        <img data-src="holder.js/100px120?theme=white">
+        <img class="holders" data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes"></div>
     </div>
