-Updated login and registeration pages and styles - Added mini logo layout

--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -17,6 +17,7 @@
   <main style="background-color: #dbe7f3; border-radius: 100px;" class="login container">
     <div class="row">
       <div class="col-12 col-6-tablet push-3-tablet text-center heading">
+        <%include ./logo-mini.ejs%>
         <h1 style="font-family: fantasy;" class="font-100">Socialytics:</h1>
       </div>
     </div>
