- Added links and text content

--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -38,6 +38,7 @@
         </form>
       </div>
     </div>
+    <p style="text-align: center" class="small text-muted">Built with &#9829; for <a target="_blank" href="https://houmanhadian.github.io/">Houman Hadian's doctoral project @ UAlg</a></p>
   </main>
 </div>
 <div class="sidepanel" id="sidepanel-login">
