--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -37,6 +37,7 @@
         </form>
       </div>
     </div>
+    <p style="text-align: center" class="small text-muted">Built with &#9829; for <a target="_blank" href="https://houmanhadian.github.io/">Houman Hadian's doctoral project @ UAlg</a></p>
   </main>
 </div>
 <%- include ../layouts/layout-footer.ejs %>
