- Changed application of overlay scroll bars due to showing problems with firefox when implemented as before (Needs more tests)

--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0" />
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0" />-->
   <title>Socialytics login </title>
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="/css/style.css">
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/css/app.css">
   <%- include ../layouts/layouts-javascripts-head.ejs %>
 </head>
-<body style="background: aliceblue">
+<body style="background: aliceblue;">
 <!--<button class="instabtn" onclick="openNav('sidepanel-login')">&#9776; Instagram </button>-->
 <!--<button class="twitrbtn" onclick="openNav()">&#9776; tw</button>-->
 <div id="app" class="flex flex-column">
