--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -161,3 +161,8 @@
 
   </div>
 </div>
+<script>
+  OverlayScrollbars(document.querySelectorAll('body'), {
+  className : "os-theme-dark",
+});
+</script>
